@@ -209,11 +209,11 @@ namespace detail
 	}
 }
 
-template<class T, class Arg1, class... Args>
-string string_format(const T& Format, Arg1&& arg1, Args&&... args)
+template<class T, class... Args>
+string string_format(const T& Format, Args&&... args)
 {
 	detail::LangString Container(Format);
-	detail::string_format_impl(Container, arg1, std::forward<Args>(args)...);
+	detail::string_format_impl(Container, std::forward<Args>(args)...);
 	// slicing is ok
 	return Container;
 }
